7/my-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-1
        image: yoanguerineau/my-app-1
        volumeMounts:
          - mountPath: /tp/2
            name: tp2
        ports:
        - containerPort: 8080
      - name: my-app-2
        image: yoanguerineau/my-app-2
        volumeMounts:
          - mountPath: /tp/3
            name: tp3
        ports:
        - containerPort: 8081
      volumes:
        - name: tp2
          hostPath:
            path: /tp/2
        - name: tp3
          hostPath:
            path: /tp/3
