7/my-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - name: my-app-1
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: my-app-2
      protocol: TCP
      port: 8081
      targetPort: 8081
