7/my-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
spec:
  rules:
  - host: my-app.local
    http:
      paths:
        - pathType: Prefix
          path: "/my-app-1"
          backend:
            service:
              name: my-app-service
              port:
                number: 8080
        - pathType: Prefix
          path: "/my-app-2"
          backend:
            service:
              name: my-app-service
              port:
                number: 8081
